# automata-dcap-attestation

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml  go.mod  go.sum  groth16.json
rust-crates/: .env.example  .gitignore  Cargo.toml  README.md  rust-toolchain  version.toml
rust-crates/.cargo/: config.toml
rust-crates/apps/cli/: Cargo.toml  README.md
rust-crates/apps/cli/src/: main.rs
rust-crates/contracts/: foundry.toml
rust-crates/contracts/dcap/: IAutomataDcapAttestation.sol  PCCSRouter.sol
rust-crates/contracts/pccs/: IEnclaveIdentityDao.sol  IFmspcTcbDao.sol  IPckDao.sol  IPcsDao.sol  ITcbEvalDao.sol
rust-crates/libraries/bindings/: Cargo.toml  build.rs
rust-crates/libraries/bindings/src/: lib.rs
rust-crates/libraries/bindings/src/bindings/: i_automata_dcap_attestation.rs  i_enclave_identity_dao.rs  i_fmspc_tcb_dao.rs  i_pck_dao.rs  i_pcs_dao.rs  i_tcb_eval_dao.rs  ipccs_router.rs  mod.rs
rust-crates/libraries/dcap-rs/: .gitignore  Cargo.toml  Makefile  README.md  help.sh
rust-crates/libraries/dcap-rs/.github/: pull_request_template.md
rust-crates/libraries/dcap-rs/.github/workflows/: main.yaml  pr.yaml
rust-crates/libraries/dcap-rs/src/: lib.rs  tdx.rs  trust_store.rs  utils.rs
rust-crates/libraries/dcap-rs/src/types/: collateral.rs  enclave_identity.rs  mod.rs  report.rs  sgx_x509.rs  tcb_info.rs
rust-crates/libraries/dcap-rs/tests/: tests.rs
rust-crates/libraries/dcap-rs/tests/common/: mod.rs
rust-crates/libraries/network-registry/: .gitignore  Cargo.toml  build.rs  metadata.toml
rust-crates/libraries/network-registry/deployment/: embed.go
rust-crates/libraries/network-registry/deployment/current/: DEPLOYMENT.md
rust-crates/libraries/network-registry/deployment/v1.0/: DEPLOYMENT.md
rust-crates/libraries/network-registry/src/: lib.rs  network.rs  parser.rs
rust-crates/libraries/pccs-reader/: Cargo.toml
rust-crates/libraries/pccs-reader/src/: constants.rs  lib.rs  multicall.rs  printer.rs  reader.rs  tcb_pem.rs  types.rs
rust-crates/libraries/pccs-reader/src/pccs/: enclave_id.rs  fmspc_tcb.rs  mod.rs  pcs.rs
rust-crates/libraries/qpl/: Cargo.toml
rust-crates/libraries/qpl/src/: lib.rs  types.rs
rust-crates/libraries/qpl/src/collaterals/: contracts.rs  helper.rs  mod.rs  pccs_types.rs
rust-crates/libraries/qpl/src/ffi/: mod.rs
rust-crates/libraries/utils/: Cargo.toml  build.rs
rust-crates/libraries/utils/src/: lib.rs  parser.rs  quote.rs  version.rs  wasm.rs
rust-crates/libraries/utils/src/wasm/: mod.rs  wrapper.rs
rust-crates/libraries/verifier/: Cargo.toml
rust-crates/libraries/verifier/src/: lib.rs  utils.rs
rust-crates/libraries/wasm/: Cargo.toml
rust-crates/libraries/wasm/src/: lib.rs
rust-crates/libraries/zkvm/: Cargo.toml
rust-crates/libraries/zkvm/methods/pico/: Cargo.toml  build.rs
rust-crates/libraries/zkvm/methods/risc0/: Cargo.toml  build.rs
rust-crates/libraries/zkvm/methods/sp1/: Cargo.toml  build.rs
rust-crates/libraries/zkvm/src/: lib.rs
rust-crates/libraries/zkvm/src/common/: display.rs  inputs.rs  mod.rs  outputs.rs  quote.rs  traits.rs  types.rs  workflow.rs
rust-crates/libraries/zkvm/src/pico/: .gitignore  cli.rs  config.rs  mod.rs  prover.rs
rust-crates/libraries/zkvm/src/risc0/: cli.rs  config.rs  mod.rs  prover.rs
rust-crates/libraries/zkvm/src/sp1/: cli.rs  config.rs  mod.rs  prover.rs
rust-crates/samples/: quotev3.hex  test_quote.hex
rust-crates/scripts/: check-bindings.sh  clean-deployment-cache.sh  update_pccs_deployment.sh
solana/automata-dcap-framework/: .gitignore  Anchor.toml  Cargo.toml  README.md
solana/automata-dcap-framework/programs-shared/: Cargo.toml
solana/automata-dcap-framework/programs-shared/src/: certs.rs  clock.rs  crl.rs  lib.rs  zk.rs
solana/automata-dcap-framework/programs-shared/src/zk/: mod.rs  sp1.rs
solana/automata-dcap-framework/programs/automata-dcap-verifier/: Cargo.toml
solana/automata-dcap-framework/programs/automata-dcap-verifier/src/: errors.rs  instructions.rs  lib.rs  state.rs  utils.rs
solana/automata-dcap-framework/programs/automata-on-chain-pccs/: Cargo.toml
solana/automata-dcap-framework/programs/automata-on-chain-pccs/src/: errors.rs  event.rs  instructions.rs  lib.rs  state.rs
solana/automata-dcap-framework/programs/dcap_ecdsa_sp1/: Cargo.toml
solana/automata-dcap-framework/programs/dcap_ecdsa_sp1/src/: lib.rs
solana/automata-dcap-framework/programs/shared/: Cargo.toml
solana/automata-dcap-framework/sdk/: Cargo.toml  build.rs
solana/automata-dcap-framework/sdk/idls/: automata_dcap_verifier.json  automata_on_chain_pccs.json  dcap_ecdsa_sp1.json
solana/automata-dcap-framework/sdk/src/: lib.rs  models.rs  pccs_client.rs  utils.rs  verifier.rs  verifier_client.rs
solana/automata-dcap-framework/sdk/src/pccs/: enclave_identity_dao.rs  fmspc_tcb_dao.rs  mod.rs  pck_dao.rs  pcs_dao.rs
solana/automata-dcap-framework/sdk/src/shared/: ecdsa.rs  mod.rs  pck.rs
solana/automata-dcap-framework/sdk/src/utils/: mod.rs  pck.rs  zk.rs
solana/automata-dcap-framework/tests/: Cargo.toml
solana/automata-dcap-framework/tests/data/: pck.der  pck_platform_crl.der  qe_identity.json  signing.der  tcb_info_v3_sgx.json  tcb_info_v3_with_tdx_module.json
solana/automata-dcap-framework/tests/src/: lib.rs  test_initialize.rs
solana/automata-dcap-framework/tests/src/pccs/: mod.rs  test_enclave_identity.rs  test_pck_certificate.rs  test_pcs_certificate.rs  test_tcb_info.rs
solana/automata-dcap-framework/zk/lib/: Cargo.toml
solana/automata-dcap-framework/zk/p256-sp1/: Cargo.toml  LICENSE-MIT  README.md
solana/automata-dcap-program/: Cargo.toml
solana/automata-dcap-program/src/: instruction.rs
solana/automata-dcap-program/src/tests/: sp1.rs
solana/poc/: Cargo.toml
solana/poc/automata-dcap-client/: Cargo.toml  README.md
solana/poc/automata-dcap-client/src/: create.rs  delete.rs  lib.rs  verify.rs
solana/programs/automata-dcap-verifier/: Cargo.toml
solana/programs/automata-dcap-verifier/src/: instructions.rs  lib.rs
solana/programs/dcap-sp1-solana-program/: Cargo.toml
(+715 files in other folders)
