[workspace]
members = [
    "programs/*",
    "sdk",
    "tests"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git", branch = "zero-copy", default-features = false }
# dcap-rs = { path = "/Users/prestonong/Desktop/work/dcap-rs", default-features = false }