[workspace]
members = [
    "programs/*",
    "sdk",
    "tests"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git", branch = "dev", default-features = false }
anchor-lang = { version = "0.31.1", default-features = false }