[workspace]
members = [
    "programs/*",
    "sdk",
    "tests"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
dcap-rs = { path = "../../rust-crates/libraries/dcap-rs", default-features = false }
anchor-lang = { version = "0.31.1", default-features = false }