[package]
name = "automata-dcap-program"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { version = "=2.1.6" }
anyhow = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = { version = "=2.1.6" }
solana-sdk = { workspace = true }
hex = { workspace = true }