[package]
name = "dcap-rs"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
description = "Intel Data Center Attestation Primitives (DCAP) Quote Verification Library (QVL) implemented in pure Rust."
repository = "https://github.com/automata-network/dcap-rs"
keywords = ["dcap", "intel", "quote", "attestation", "sgx", "rust", "library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
hex          	= { version = "0.4.3", features = ["serde"]}
anyhow          = { version = "1.0.76" }
x509-cert    	= { version = "0.2.5" }
asn1            = { version = "0.17.0" }
serde        	= { version = "1.0", features = ["derive"] }
serde_json   	= { version = "1.0.125", features = ["raw_value"] }
chrono       	= { version = "0.4.38", features = ["serde"]}
time         	= { version = "0.3.36" }
zerocopy        = { version = "0.7.34", features = ["derive"]}

pem          	= { version = "3.0.4" }
base64ct      	= { version = "=1.6.0" }
p256         	= { version = "0.13.2" }
sha2         	= { version = "0.10.8" }
tiny-keccak     = { version = "2.0.2", features = ["keccak"] }
bytemuck        = { version = "1.23.0", features = ["derive"] }
alloy-sol-types = { version = "^1.1.0" }

[dependencies.x509-verify]
version = "0.4.6"
default-features = false
features = [ "std", "p256", "x509" ]

[dev-dependencies]
pccs-reader-rs = { workspace = true }
tokio = { workspace = true }
automata-dcap-network-registry = { workspace = true }
alloy = { workspace = true }

[features]
default = ["full"]
# Solana BPF must use the "zero-copy" feature
zero-copy = []
full = []
