[package]
name = "automata-dcap-network-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
include = [
    "src/**/*",
    "build.rs",
    "metadata.toml",
    "deployment/**/*",
    "!deployment/cache/**",
]

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
automata-dcap-evm-bindings = { workspace = true }
automata-dcap-utils = { workspace = true }
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"

[build-dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"

