[package]
name = "automata-dcap-network-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
include = [
    "src/**/*",
    "metadata.toml",
    "deployment/**/*",
]

[dependencies]
alloy = { workspace = true, features = ["full", "node-bindings", "rpc-types", "rpc-types-eth", "contract"] }
anyhow = { workspace = true }
automata-dcap-evm-bindings = { workspace = true }
automata-dcap-utils = { workspace = true }
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true }
