[package]
name = "automata-dcap-utils"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[lib]
name = "automata_dcap_utils"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
dcap-rs = { workspace = true }
alloy = { workspace = true, default-features = false, features = ["sol-types"] }

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2.99", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[build-dependencies]
toml = "0.8"
proc-macro2 = "1.0"
quote = "1.0"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "getrandom"]
