[package]
name = "automata-dcap-wasm"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[lib]
name = "automata_dcap_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
automata-dcap-utils = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
dcap-rs = { workspace = true }

# WASM dependencies
wasm-bindgen = "0.2.99"
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2", features = ["js"] }
