[package]
name = "automata-dcap-zkvm"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[lib]
name = "automata_dcap_zkvm"
path = "src/lib.rs"

[features]
default = []
risc0 = ["dep:risc0-zkvm", "dep:risc0-ethereum-contracts", "dep:boundless-market"]
sp1 = ["dep:sp1-sdk"]
pico = ["dep:pico-sdk", "dep:num", "dep:num-bigint", "dep:p3-field"]

[dependencies]
# Common dependencies (always included)
dcap-rs = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
x509-parser = { workspace = true }
alloy = { workspace = true, features = ["full", "node-bindings", "rpc-types", "rpc-types-eth", "contract"] }
automata-dcap-utils = { workspace = true }
automata-dcap-network-registry = { path = "../network-registry" }
pccs-reader-rs = { path = "../pccs-reader" }
log = { workspace = true }
env_logger = { workspace = true }

# New trait-based architecture dependencies
alloy-primitives = "1.0"
alloy-sol-types = "1.0"
lazy_static = "1.4"
bincode = "1.3.3"
async-trait = "0.1"

# RISC0 specific dependencies (feature-gated)
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.0", optional = true }
risc0-zkvm = { version = "^3.0.3", optional = true }
boundless-market = { version = "^1.0", optional = true }

# SP1 specific dependencies (feature-gated)
sp1-sdk = { version = "^5.2.0", optional = true }

# Pico specific dependencies (feature-gated)
pico-sdk = { git = "https://github.com/brevis-network/pico", tag = "v1.1.6", optional = true }
num = { version = "0.4.3", optional = true }
num-bigint = { version = "0.4.6", optional = true }
p3-field = { git = "https://github.com/brevis-network/Plonky3.git", rev = "a4d376b", optional = true }

# Logging dependencies (now non-optional, moved to common dependencies above)
