[package]
name = "automata-dcap-zkvm"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[lib]
name = "automata_dcap_zkvm"
path = "src/lib.rs"

[features]
default = ["host"]
# Minimal feature for zkVM guest programs - only includes input/output types
guest = []
# Host-side common dependencies
host = [
    "dep:serde_json", "dep:serde", "dep:clap", "dep:hex", "dep:tokio",
    "dep:anyhow", "dep:x509-parser", "dep:alloy", "dep:automata-dcap-utils",
    "dep:automata-dcap-network-registry", "dep:pccs-reader-rs", "dep:log",
    "dep:env_logger", "dep:alloy-primitives", "dep:lazy_static", "dep:bincode",
    "dep:async-trait"
]
# Host-side proving features (each implicitly requires host deps)
risc0 = ["host", "dep:risc0-zkvm", "dep:risc0-ethereum-contracts", "dep:boundless-market"]
sp1 = ["host", "dep:sp1-sdk"]
pico = ["host", "dep:pico-sdk", "dep:num", "dep:num-bigint", "dep:ff"]

[dependencies]
# Minimal dependencies (always included - required for guest feature)
dcap-rs = { workspace = true, features = ["full"] }
alloy-sol-types = "1.0"

# Host-side dependencies (optional - not needed for guest)
serde_json = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
alloy = { workspace = true, features = ["full", "node-bindings", "rpc-types", "rpc-types-eth", "contract"], optional = true }
automata-dcap-utils = { workspace = true, optional = true }
automata-dcap-network-registry = { path = "../network-registry", optional = true }
pccs-reader-rs = { path = "../pccs-reader", optional = true }
log = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
alloy-primitives = { version = "1.0", optional = true }
lazy_static = { version = "1.4", optional = true }
bincode = { version = "1.3.3", optional = true }
async-trait = { version = "0.1", optional = true }

# RISC0 specific dependencies (feature-gated)
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.0", optional = true }
risc0-zkvm = { version = "^3.0.3", optional = true }
boundless-market = { version = "~1.0", optional = true }

# SP1 specific dependencies (feature-gated)
sp1-sdk = { version = "^5.2.0", optional = true }

# Pico specific dependencies (feature-gated)
pico-sdk = { git = "https://github.com/brevis-network/pico", tag = "v1.2.2", optional = true }
num = { version = "0.4.3", optional = true }
num-bigint = { version = "0.4.6", optional = true }
ff = { version = "0.13", optional = true }

# Logging dependencies (now non-optional, moved to common dependencies above)
