[package]
name = "sdk"
version = "0.1.0"
description = "SDK for verifying DCAP Quotes on Solana"
edition = "2021"


[dependencies]
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = { version = "0.31.0" }
solana-secp256r1-program = { version = "2.2.2" }
sha2 = { version = "0.10.8" }
anyhow = { version = "1.0.93" }
tokio = { version = "1.39.0", features = ["full"] }
bytemuck = { version = "1.14.0" }
hex = { version = "0.4.3" }
x509-cert    	= { version = "0.2.5" }
dcap-rs = { git = "https://github.com/udsamani/dcap-rs.git", rev = "9251977fb1946885313079a33ff921764a660fdf"}
p256 = { version = "0.13.2" }
zerocopy = { version = "0.7.34", features = ["derive"] }
serde_json = { version = "1.0.100" }

[dependencies.x509-verify]
version = "0.4.6"
default-features = false
features = [ "std", "p256", "x509" ]
