[package]
name = "sdk"
version = "0.1.0"
description = "SDK for verifying DCAP Quotes on Solana"
edition = "2021"

[dependencies]
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = { version = "0.31.0" }
solana-secp256r1-program = { version = "2.2.2" }
sha2 = { version = "0.10.8" }
anyhow = { version = "1.0.93" }
tokio = { version = "1.39.0", features = ["full"] }
bytemuck = { version = "1.14.0" }
hex = { version = "0.4.3" }
der = { version = "0.7.9", default-features = false, features = ["derive", "oid"] }
der-parser = { version = "10.0.0" }
x509-cert    	= { version = "0.2.5" }
dcap-rs = { workspace = true, features = ["full"] }
p256 = { version = "0.13.2" }
zerocopy = { version = "0.7.34", features = ["derive"] }
serde_json = { version = "1.0.100" }
pem = { version = "3.0.5" }
dcap-p256-sp1-lib = { path = "../zk/p256-sp1/lib" }
dcap-p256-zk-lib = { path = "../zk/lib" }

[dependencies.x509-verify]
version = "0.4.6"
default-features = false
features = [ "std", "p256", "x509" ]
