[package]
name = "dcap-sp1-solana-program"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }
hex = { workspace = true }
sha2 = { workspace = true }

[features]
no-entrypoint = []