[package]
name = "automata-on-chain-pccs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "automata_on_chain_pccs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
solana-zk-client = { git = "ssh://git@github.com/automata-network/solana-zkvm-verifier.git", default-features = false }
hex = "0.4.3"
sha2 = "0.10.8"
x509-cert = { version = "0.2.5" }
der = { version = "0.7.9", default-features = false, features = ["derive", "oid"] }
# der-parser = { version = "10.0.0" }