[package]
name = "automata-on-chain-pccs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "automata_on_chain_pccs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
solana-zk-client = { git = "https://github.com/automata-network/solana-zkvm-verifier.git", default-features = false }
hex = "0.4.3"
sha2 = "0.10.8"
# dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git", branch = "dev"}
dcap-rs = { path = "/Users/prestonong/Desktop/work/dcap-rs", default-features = false, features = ["zero-copy"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
programs_shared = { path = "../../programs-shared" }