[package]
version = "0.1.0"
name = "dcap-p256-sp1-program"
edition = "2021"

[dependencies]
sp1-zkvm = { workspace = true }
dcap-rs = { workspace = true }
dcap-p256-zk-lib = { workspace = true }
borsh = { workspace = true }
serde_json = { workspace = true }
der = { version = "0.7.9", default-features = false, features = ["derive", "oid"] }
x509-cert = { version = "0.2.5" }
sha2 = { version = "=0.10.8" }
p256 = { version = "=0.13.2" }