[package]
name = "dcap-pico-guest"
version = "0.1.0"
edition = "2021"

# Standalone crate - not part of workspace
# Required for zkVM compilation with specific patches
[workspace]

[dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico", tag = "v1.2.2" }
dcap-rs = { path = "../../../../dcap-rs" }
automata-dcap-zkvm = { path = "../../..", default-features = false, features = ["guest"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# Pico-specific crypto patches
[patch.crates-io]
sha2 = { git = "https://github.com/brevis-network/hashes", tag = "pico-patch-v1.0.1-sha2-v0.10.8" }
ecdsa = { git = "https://github.com/brevis-network/signatures", tag = "pico-patch-v1.0.1-ecdsa-0.16.9" }
tiny-keccak = { git = "https://github.com/brevis-network/tiny-keccak", tag = "pico-patch-v1.0.0-keccak-v2.0.2" }
