[package]
name = "dcap-risc0-guest"
version = "0.1.0"
edition = "2021"

# Standalone crate - not part of workspace
# Required for zkVM compilation with specific patches
[workspace]

[[bin]]
name = "guest"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ["std", "unstable"] }
dcap-rs = { path = "../../../../dcap-rs" }
automata-dcap-zkvm = { path = "../../..", default-features = false, features = ["guest"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# RISC0-specific crypto patches
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
