[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.5" }
bonsai-sdk = { version = "1.2.5", features = ["non_blocking"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
anyhow = { version = "1.0.75" }
borsh = { version = "1.5.7", features = ["derive"] }
bincode = { version = "1.3" }

[dev-dependencies]
x509-cert = { version = "0.2.5" }
der = { version = "0.7.9", default-features = false, features = ["derive", "oid"] }
der-parser = { version = "10.0.0" }
sha2 = { version = "=0.10.8" }