[package]
name = "dcap-sp1-guest"
version = "0.1.0"
edition = "2021"

# Standalone crate - not part of workspace
# Required for zkVM compilation with specific patches
[workspace]

[dependencies]
sp1-zkvm = { version = "^5.2.1" }
dcap-rs = { path = "../../../../../dcap-rs" }
automata-dcap-zkvm = { path = "../../../..", default-features = false, features = ["guest"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# SP1-specific crypto patches
[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
ecdsa = { git = "https://github.com/sp1-patches/signatures", tag = "patch-16.9-sp1-4.1.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
